--- a/_posts/2019-07-08-the-us-narrative-today.html
+++ b/_posts/2019-07-08-the-us-narrative-today.html
@@ -2662,107 +2662,107 @@ stories:
   domain: http://www.pnna.com/
   link: https://www.pnna.com/pnna/article_14bd0358-7806-11e9-8e63-cbc0ee6ae178.html
 images:
-- name: gypsy-wagon-gypsywagon-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-space-pizza.jpg
-- name: old-door-lock-old-door-lock-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-deep-connections.jpg
-- name: ellis-island-ellis-island-room-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kand-two.jpg
-- name: oldhouse-oldhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dali-two.jpg
-- name: stories-cargo-ship-on-sea-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-diego-rivera1.jpg
-- name: fence-mexico-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-spagetti-accident.jpg
-- name: downtown-trucksilo-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purp-paper.jpg
-- name: windowmountain-window-mountain-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-far-away.jpg
-- name: locked-up-steam-lock-up-steam-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-brush.jpg
-- name: old-door-lock-old-door-lock-2-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crafty-painting.jpg
-- name: razorwire-DSC-0080-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-yellow-collage.jpg
-- name: white-house-lawn-white-house-lawn-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-really-hot.jpg
-- name: nazi-invasion-IMG_1184.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_1184.jpg
-- name: dragon-desert-desert-dragon-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-space-pizza.jpg
-- name: oldcabin-store-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-light-dali.jpg
-- name: fence-mexico-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-umberto-bocc.jpg
-- name: eduardo-eduardo-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-colored-circuits.jpg
-- name: fence-fence-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-alien-goggles.jpg
-- name: crow-crow-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gan-vogh.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
-- name: aws-s3-stories-fredericksburg-downtown-flag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fredericksburg-downtown-flag.jpg
-- name: downtown-los-angeles-downtown-la-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-soul.JPG
-- name: white-house-lawn-white-house-lawn-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-light-dali.jpg
-- name: hollywood-building-hollywood-building-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-pond.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
-- name: white-house-lawn-white-house-window-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-spagetti-accident.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-ww2-color.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-ww2-color.png
-- name: death-valley-death-valley-national-park-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-colorful-dream.jpg
-- name: powerlines-power-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-soul.jpg
-- name: beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
-- name: blossombar-crafty-painting-file-00-00-50-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-38.jpg
-- name: aws-s3-stories-machine-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-machine-road-light-dali.jpg
-- name: liberty-back-statue-liberty-back-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-oily-mcoilface.jpg
-- name: school-clouds-church-clouds-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kand-two.jpg
-- name: art-museum-art-museum-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-atari-asteroids.jpg
-- name: berlinwall2-berlinwall-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crabapple.jpg
-- name: server-cloud-server-racks-clouds-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-green-zuma.jpg
-- name: border-fence-border-fence-on-hill-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-sand-paper.jpg
-- name: razorwire-DSC-0080-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kandinsky-bv.jpg
-- name: stories-mosaic-face-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-mosaic-face-blue-circuit.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit-3.jpg
-- name: windowmountain-window-mountain-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-electricity.jpg
-- name: castle-wall-DSC-0067-diego-rivera1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-diego-rivera1.JPG
-- name: flower-barbed-wire-flower-barbed-wire-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-gred-mash.jpg
-- name: hollywood-building-hollywood-building-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-china-prop.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
-- name: curtain-curtain-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crunch-paper.jpg
-- name: oldhouse-granaryfield-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-post-modern.jpg
-- name: fence-mexico-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-gan-vogh.jpg
-- name: walled-garden-walled-garden-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colorful-blocks.jpg
+- name: supreme-court-supremecourt-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-far-away.jpg
+- name: aws-s3-stories-new-68-113-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-113-800-500-0-max-0--1--1.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
+- name: old-school-house-old-schoolhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smooth-ride.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
+- name: ellis-island-ellis-island-room-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-neo-instinct.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+- name: udnie-P8210043.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P8210043.jpg
+- name: dc-statue-dcstatue-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-spagetti-accident.jpg
+- name: white-house-lawn-white-house-lawn-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-brush.jpg
+- name: aws-s3-mountainlake-mountainlake-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-600.jpg
+- name: paris-paris-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-graham-sutherland.jpg
+- name: oldroad-old-road-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gred-mash.jpg
+- name: white-house-lawn-white-house-lawn-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-marcel-duchamp.jpg
+- name: miamibeach-miamibeach-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-creativity.jpg
+- name: wind-mills-windmills-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-clean-view.jpg
+- name: store-on-corner-oldcabin-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-graham-sutherland.jpg
+- name: white-house-lawn-white-house-window-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-atari-missle.jpg
+- name: containership-containership-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smooth-ride.jpg
+- name: windowmountain-window-mountain-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-paper.jpg
+- name: curtain-curtain-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-emily-carr.jpg
+- name: liberty-back-statue-liberty-back-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dali-three.jpg
+- name: hollywood-building-hollywood-building-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-storm.jpg
+- name: aws-s3-stories-catacombs-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-catacombs-copper-circuit-2.jpg
+- name: old-door-lock-old-door-lock-2-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-neo-instinct.jpg
+- name: locked-up-steam-lock-up-steam-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purp-paper.jpg
+- name: bordercrossing-bordercrossing-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-kand-two.jpg
+- name: fence-fence-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-gan-vogh.jpg
+- name: gypsy-wagon-gypsywagon-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-far-away.jpg
+- name: downtown-trucksilo-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-creativity.jpg
+- name: power-lines-power-lines-empty-space-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-hot-spicy.jpg
+- name: aws-s3-square-old-yellow-house-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-old-yellow-house-square.jpg
+- name: oldtrain-oldtrain-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-post-modern.jpg
+- name: subway-subway-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-wols.jpg
+- name: hollywood-building-hollywood-building-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-mucha-mult.jpg
+- name: rain-princess-P5290036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P5290036.jpg
+- name: copper-circuit-IMG_1184.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_1184.jpg
+- name: beach-rocks-beach-rocks-currents-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-dresden.jpg
+- name: oldtrain-oldtrain-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dali-two.jpg
+- name: powerlines-power-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-circuit.jpg
+- name: abe-lincoln-one-ww2-color-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-00-00.jpg
+- name: crow_kandinsky_bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kandinsky_bv.jpg
+- name: old-door-lock-old-door-lock-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-two.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
+- name: old-door-lock-old-door-lock-2-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-dali.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-propaganda-leaflets.JPG
+- name: blossombar-alien-goggles-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-alien-goggles-file-00-00-00-00.jpg
+- name: server-cloud-server-racks-door-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-blocks.jpg
+- name: sand-hand-sand-hand-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-plentiful.jpg
+- name: downtown-los-angeles-downtown-la-umberto-bocc.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-umberto-bocc.JPG
+- name: oldhouse-oldhouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colorful-blocks.jpg
 ---
 Wealthy Financier Charged With Molesting Dozens Of Girls.&nbsp;Music Festival Under Fire For Basing Ticket Prices On Race.&nbsp;Geleta Earns Collegiate Honors Citation.&nbsp;The Eight Million Dollar Bridge.&nbsp;Horse Put Down After Truck, Trailer Collision In Las Vegas.&nbsp;Felony Charges Dropped Against Man Who Died.&nbsp;Rattled Resident Clean Up, Officials Eye Damage After Quakes.&nbsp;New Home Construction Drops In Hailey.&nbsp;
